--- a/public/index.html
+++ b/public/index.html
@@ -74,16 +74,15 @@
           <input type="submit" value="浏览"/>
         </p>
       </form>
-      <h3><center>禁网导航</center></h3>
 	  <h4>实用工具</h4>
 		<a href="./proxy/https://www.google.com" target="_blank">Google搜索</a>
 		<a href="./proxy/https://zh.wikipedia.org" target="_blank">维基百科</a>
 		<a href="https://github.com/gfw-breaker" target="_blank">GitHub</a>
     </div>
 	<br/>
-	<p><center>一键部署免费代理教程：<a href="https://github.com/gfw-breaker/heroku-node-proxy#--end--" target="_blank">heroku-node-proxy</a><center><p>
+	<p><center>免费代理：<a href="https://zhen.azurewebsites.net" target="_blank">heroku-node-proxy</a><center><p>
     <div class="footer">
-      <p>特别鸣谢：<a href="https://github.com/nfriedly/node-unblocker">Node Unblocker</a> by <a href="http://nfriedly.com/" title="Node.js developer and JavaScript Expert">Nathan Friedly</a></p>
+      <p>特别鸣谢：<a href="https://zhen.azurewebsites.net">ZHH</a> by <a href="https://zhen.azurewebsites.net" title="Node.js developer and JavaScript Expert">ZHH</a></p>
     </div>
   
   </div>
